@@ -291,7 +291,7 @@ public final class ApplicationStateHandler extends AbstractHandler {
             oos.writeObject(repository);
             getLogger().info(LogCategories.HANDLER, StringUtils.getString("DONE (", timer.stop(), " seconds)"));
             // Set repository as not dirty
-            repository.setDirty(false);
+            repository.setDirty(false, false);
         } catch (IOException e) {
             getLogger().error(LogCategories.HANDLER, "Could not write serialized repository");
             getLogger().debug(LogCategories.HANDLER, e);
@@ -560,7 +560,7 @@ public final class ApplicationStateHandler extends AbstractHandler {
                 getLogger().info(LogCategories.HANDLER, StringUtils.getString("Reading repository cache done (", (t1 - t0) / 1000.0, " seconds)"));
                 
                 // Save repository again to avoid reading XML in next start
-                repository.setDirty(true);
+                repository.setDirty(true, true);
                 
                 return repository;
             } catch (IOException e1) {
